# Ocean

./: .env.example  .gitignore  README.md  config.example.yaml  config.paddle.example.yaml  pyproject.toml
docs/: auth-login-plan.md  elasticsearch-deployment.md  frontend-migration-plan.md  guide.md  llm-conversation-backend-plan.md  paddleocr-api.md  requirements.md  technical-design.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: jobs.ts
frontend/src/styles/: theme.css
src/ocean/: __init__.py  cli.py  config.py  logging_utils.py  models.py  pdf_loader.py  pdf_utils.py  pipeline.py  web.py
src/ocean/exporters/: __init__.py  csv_exporter.py  jsonl.py  markdown.py
src/ocean/extractors/: __init__.py  chinese.py  chunker.py  keywords.py  matcher.py  semantic.py
src/ocean/llm/: __init__.py  client.py
src/ocean/ocr/: __init__.py  base.py  mineru.py  paddle.py
src/ocean/storage/: __init__.py  elasticsearch.py
tests/: test_config_and_web_ocr.py  test_keyword_matcher.py  test_llm_client.py  test_markdown_exporter.py  test_paddleocr_client.py  test_pipeline_reliability.py  test_semantic_extractor.py  test_storage_llm_conversations.py  test_storage_public_documents.py  test_web_auth.py  test_web_keywords.py  test_web_llm.py
