[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ocean-pdf"
version = "0.1.0"
description = "Batch PDF OCR and policy text extraction toolkit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "PyYAML>=6.0",
  "pypdf>=4.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30"
]

[project.scripts]
ocean = "ocean.cli:main"
ocean-web = "ocean.web:main"

[tool.setuptools.packages.find]
where = ["src"]
